docs/attachment/kubernetes/app/51-nginx-deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      k8s-app: nginx
    name: nginx
    namespace: default
  spec:
    replicas: 4
    revisionHistoryLimit: 5
    selector:
      matchLabels:
        k8s-app: nginx
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          k8s-app: nginx
      spec:
        containers:
        - image: hub.8ops.top/third/nginx:1.21.3
          imagePullPolicy: IfNotPresent
          name: nginx
          resources:
            limits:
              cpu: 200m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 50Mi
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      k8s-app: nginx
    name: nginx
    namespace: default
  spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      k8s-app: nginx
    type: ClusterIP
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    labels:
      k8s-app: nginx
    name: nginx
    namespace: default
  spec:
    ingressClassName: external
    tls:
      - hosts:
          - nginx.8ops.top
        secretName: tls-8ops.top
    rules:
    - host: nginx.8ops.top
      http:
        paths:
        - backend:
            service:
              name: nginx
              port:
                number: 80
          path: /
          pathType: Prefix
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
